codepkg/objects/PHOS_Document_Repository__mdt.object
<CustomObject>
    <description>PHOS Document Repository</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PHOS Document Repository</label>
    <pluralLabel>PHOS Document Repositories</pluralLabel>
</CustomObject>